--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-native": "0.76.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-dots": "^1.3.5",
     "react-native-mask-text": "^0.14.2",
