--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
@@ -37,6 +38,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "form-data": "^4.0.1",
     "iconsax-react-native": "^0.0.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
