feat: implements chatbot

--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
+    "expo-updates": "~0.26.9",
     "expo-web-browser": "~14.0.1",
     "form-data": "^4.0.1",
     "iconsax-react-native": "^0.0.8",
