--- a/app/ios/AgilMed/Supporting/Expo.plist
+++ b/app/ios/AgilMed/Supporting/Expo.plist
@@ -9,7 +9,7 @@
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
     <key>EXUpdatesRuntimeVersion</key>
-    <string>1.0.0</string>
+    <string>exposdk:52.0.0</string>
     <key>EXUpdatesURL</key>
     <string>https://u.expo.dev/7b4121bd-eee4-4d44-b77a-43186f940250</string>
   </dict>
