feat: update icons

--- a/app/app.json
+++ b/app/app.json
@@ -4,7 +4,7 @@
     "slug": "agilmed",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/android/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,7 +14,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/android/icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.diogoamv.agilmed"
