--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "natural": "^8.0.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
+    "redoc": "^2.5.0",
+    "redoc-express": "^2.1.0",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
