--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,8 @@
     "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
     "nodemailer": "^6.9.16",
-    "pg": "^8.13.1",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "redoc": "^2.5.0",
     "redoc-express": "^2.1.0",
     "sequelize": "^6.37.5",
@@ -36,6 +37,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.7",
+    "sequelize-cli": "^6.6.2",
     "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
