chore: update workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Deploy para Azure
+name: CI/CD - Deploy API Node.js para Azure
 
 on:
   push:
@@ -8,6 +8,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./api
 
     steps:
       - name: Checkout do código
@@ -22,7 +26,7 @@ jobs:
       - name: Build da imagem Docker
         run: docker build -t ${{ secrets.DOCKER_IMAGE }} .
 
-      - name: Push da imagem para Docker Hub
+      - name: Push da imagem para o Docker Hub
         run: docker push ${{ secrets.DOCKER_IMAGE }}
 
       - name: Login na Azure
@@ -32,12 +36,14 @@ jobs:
 
       - name: Configurar variáveis de ambiente
         run: |
-          az webapp config appsettings set --name ${{ secrets.AZURE_WEBAPP_NAME }} --resource-group ${{ secrets.AZURE_RG }} \
+          az webapp config appsettings set \
+            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+            --resource-group ${{ secrets.AZURE_RG }} \
             --settings DATABASE_URL=${{ secrets.DATABASE_URL }} \
                       SUPABASE_URL=${{ secrets.SUPABASE_URL }} \
                       SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
 
-      - name: Atualizar container do App Service
+      - name: Atualizar container da Web App
         run: |
           az webapp config container set \
             --name ${{ secrets.AZURE_WEBAPP_NAME }} \
