--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
