--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tedious": "^18.6.1"
   },
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
