--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.46.1",
+    "@azure/storage-blob": "^12.27.0",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
