--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
                       DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
                       SUPABASE_URL=${{ secrets.SUPABASE_URL }} \
                       SUPABASE_KEY=${{ secrets.SUPABASE_KEY }} \
-                      AZURE_STORAGE_CONNECTION_STRING=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+                      AZURE_STORAGE_CONNECTION_STRING="${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}"
 
       - name: Atualizar container da Web App
         run: |
