fix: add secrets to mail

--- a/api/.env.example
+++ b/api/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL=
 DATABASE_USER=
 DATABASE_DB=
 DATABASE_PASSWORD=
+AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=
+SMTP_USER=
+SMTP_PASS=
