--- a/app/app.json
+++ b/app/app.json
@@ -41,13 +41,16 @@
     },
     "extra": {
       "eas": {
-        "projectId": "7b4121bd-eee4-4d44-b77a-43186f940250"
+        "projectId": "f6a2346a-a4f7-4d08-b433-dba6b88bf666"
+      },
+      "router": {
+        "origin": false
       }
     },
     "owner": "diogoamv",
     "runtimeVersion": "exposdk:52.0.0",
     "updates": {
-      "url": "https://u.expo.dev/7b4121bd-eee4-4d44-b77a-43186f940250"
+      "url": "https://u.expo.dev/f6a2346a-a4f7-4d08-b433-dba6b88bf666"
     }
   }
 }
