--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native/assets-registry": "^0.79.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@reduxjs/toolkit": "^2.3.0",
@@ -31,7 +32,7 @@
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
-    "expo-font": "~13.3.1",
+    "expo-font": "^13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
