--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^7.1.9",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.61.0",
+    "add": "^2.0.6",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "expo": "^53.0.9",
@@ -52,7 +53,6 @@
     "react-native": "0.79.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-loading-dots": "^1.3.5",
     "react-native-maps": "1.20.1",
     "react-native-mask-text": "^0.14.2",
     "react-native-reanimated": "~3.17.4",
@@ -61,10 +61,12 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.11.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.1.2",
     "redux-saga": "^1.3.0",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "devDependencies": {
