--- a/api/.env.example
+++ b/api/.env.example
@@ -10,4 +10,6 @@ SMTP_PASS=
 JWT_SECRET=
 CHATBOT_URL=
 AZURE_MAPS_KEY=
-OPENROUTER_API_KEY=
+FIRST_OPENROUTER_API_KEY=
+SECOND_OPENROUTER_API_KEY=
+DB_URL=
