--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "@azure/storage-blob": "^12.27.0",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
