--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/storage-blob": "^12.27.0",
+    "@gorhom/portal": "^1.0.14",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
