feat: configure redis

--- a/api/.env.example
+++ b/api/.env.example
@@ -13,3 +13,12 @@ AZURE_MAPS_KEY=
 FIRST_OPENROUTER_API_KEY=
 SECOND_OPENROUTER_API_KEY=
 DB_URL=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_TLS=
+
+OPENROUTER_API_KEY=
+OPENROUTER_MODEL=
+OPENROUTER_BASE_URL=
