--- a/api/package.json
+++ b/api/package.json
@@ -6,18 +6,24 @@
   "dependencies": {
     "@azure/storage-blob": "^12.27.0",
     "@gorhom/portal": "^1.0.14",
+    "@langchain/community": "^0.3.45",
+    "@langchain/core": "^0.3.57",
+    "@langchain/openai": "^0.5.11",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.27",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
+    "redis": "^5.1.1",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
