--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,8 @@
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "zod": "^3.25.39"
   },
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
