--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "expo-web-browser": "~14.1.6",
     "form-data": "^4.0.1",
     "iconsax-react-native": "^0.0.8",
+    "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
