--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,69 +1,69 @@
-name: CI/CD - Deploy API Node.js para Azure
+# name: CI/CD - Deploy API Node.js para Azure
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - "api/**"
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - "api/**"
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ./api
+#     defaults:
+#       run:
+#         working-directory: ./api
 
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout do código
+#         uses: actions/checkout@v4
 
-      - name: Login no Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Login no Docker Hub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build da imagem Docker
-        run: docker build -t ${{ secrets.DOCKER_IMAGE }} .
+#       - name: Build da imagem Docker
+#         run: docker build -t ${{ secrets.DOCKER_IMAGE }} .
 
-      - name: Push da imagem para o Docker Hub
-        run: docker push ${{ secrets.DOCKER_IMAGE }}
+#       - name: Push da imagem para o Docker Hub
+#         run: docker push ${{ secrets.DOCKER_IMAGE }}
 
-      - name: Login na Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+#       - name: Login na Azure
+#         uses: azure/login@v1
+#         with:
+#           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Gerar settings.json
-        run: |
-          echo '{
-            "DATABASE_URL": "${{ secrets.DATABASE_URL }}",
-            "DATABASE_USER": "${{ secrets.DATABASE_USER }}",
-            "DATABASE_DB": "${{ secrets.DATABASE_DB }}",
-            "DATABASE_PASSWORD": "${{ secrets.DATABASE_PASSWORD }}",
-            "SMTP_USER": "${{ secrets.SMTP_USER }}",
-            "SMTP_PASS": "${{ secrets.SMTP_PASS }}",
-            "AZURE_STORAGE_CONNECTION_STRING": "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}"
-          }' > settings.json
+#       - name: Gerar settings.json
+#         run: |
+#           echo '{
+#             "DATABASE_URL": "${{ secrets.DATABASE_URL }}",
+#             "DATABASE_USER": "${{ secrets.DATABASE_USER }}",
+#             "DATABASE_DB": "${{ secrets.DATABASE_DB }}",
+#             "DATABASE_PASSWORD": "${{ secrets.DATABASE_PASSWORD }}",
+#             "SMTP_USER": "${{ secrets.SMTP_USER }}",
+#             "SMTP_PASS": "${{ secrets.SMTP_PASS }}",
+#             "AZURE_STORAGE_CONNECTION_STRING": "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}"
+#           }' > settings.json
 
-      - name: Configurar variáveis de ambiente
-        run: |
-          az webapp config appsettings set \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group ${{ secrets.AZURE_RG }} \
-            --settings @settings.json
+#       - name: Configurar variáveis de ambiente
+#         run: |
+#           az webapp config appsettings set \
+#             --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+#             --resource-group ${{ secrets.AZURE_RG }} \
+#             --settings @settings.json
 
-      - name: Atualizar container da Web App
-        run: |
-          az webapp config container set \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group ${{ secrets.AZURE_RG }} \
-            --docker-custom-image-name ${{ secrets.DOCKER_IMAGE }}
+#       - name: Atualizar container da Web App
+#         run: |
+#           az webapp config container set \
+#             --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+#             --resource-group ${{ secrets.AZURE_RG }} \
+#             --docker-custom-image-name ${{ secrets.DOCKER_IMAGE }}
 
-      - name: Reiniciar a Web App
-        run: |
-          az webapp restart \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group ${{ secrets.AZURE_RG }}
+#       - name: Reiniciar a Web App
+#         run: |
+#           az webapp restart \
+#             --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+#             --resource-group ${{ secrets.AZURE_RG }}
